Make GetCartInfo not return 403, devious middleware hack
